--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="beranda.html" class="active">Input Barang</a></li>
+                <li><a href="index.html" class="active">Input Barang</a></li>
                 <li><a href="barangmasuk1.html">Barang Masuk</a></li>
                 <li><a href="inventaris.html">Permintaan Barang</a></li>
                 <li><a href="laporan.html">Cetak Laporan</a></li>
