--- a/inventaris.html
+++ b/inventaris.html
@@ -476,8 +476,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="beranda.html">Input Barang</a></li>
-				<li><a href="barangmasuk1.html">Barang Masuk</a></li>
+                <li><a href="index.html">Input Barang</a></li>
+		<li><a href="barangmasuk1.html">Barang Masuk</a></li>
                 <li><a href="inventaris.html" class="active">Permintaan Barang</a></li>
                 <li><a href="laporan.html">Cetak Laporan</a></li>
                 <li><a href="pengaturan.html">Pengaturan</a></li>
