--- a/laporan.html
+++ b/laporan.html
@@ -389,8 +389,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="beranda.html">Input Barang</a></li>
-				<li><a href="barangmasuk1.html">Barang Masuk</a></li>
+                <li><a href="index.html">Input Barang</a></li>
+		<li><a href="barangmasuk1.html">Barang Masuk</a></li>
                 <li><a href="inventaris.html">Permintaan Barang</a></li>
                 <li><a href="laporan.html" class="active">Cetak Laporan</a></li>
                 <li><a href="pengaturan.html">Pengaturan</a></li>
