--- a/new 1.html
+++ b/new 1.html
@@ -559,8 +559,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="beranda.html" class="active">Beranda</a></li>
-				<li><a href="barangmasuk1.html">Barang Masuk</a></li>
+                <li><a href="index.html" class="active">Beranda</a></li>
+		<li><a href="barangmasuk1.html">Barang Masuk</a></li>
                 <li><a href="inventaris.html">Inventaris (Permintaan)</a></li>
                 <li><a href="laporan.html">Laporan</a></li>
                 <li><a href="pengaturan.html">Pengaturan</a></li>
