--- a/pengaturan.html
+++ b/pengaturan.html
@@ -496,8 +496,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="beranda.html">Beranda</a></li>
-				<li><a href="barangmasuk1.html">Barang Masuk</a></li>
+                <li><a href="index.html">Beranda</a></li>
+		<li><a href="barangmasuk1.html">Barang Masuk</a></li>
                 <li><a href="inventaris.html">Inventaris</a></li>
                 <li><a href="laporan.html" class="active">Laporan</a></li>
                 <li><a href="pengaturan.html">Pengaturan</a></li>
