--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             // Simple client-side validation (replace with actual authentication on a server)
             if (username === "dispora" && password === "dispora123") {
                 alert("Login Berhasil!");
-                window.location.href = "index.html"; // Redirect to index.html
+                window.location.href = "beranda.html"; // Redirect to beranda.html
             } else {
                 alert("Nama pengguna atau kata sandi salah. Silakan coba lagi.");
             }
