--- a/barangmasuk1.html
+++ b/barangmasuk1.html
@@ -532,7 +532,7 @@
             <div class="dropdown-content">
                 <a href="profile.html">Profil</a>
                 <a href="settings.html">Pengaturan</a>
-                <a href="login.html">Logout</a>
+                <a href="index.html">Logout</a>
             </div>
         </div>
     </header>
