--- a/inventaris.html
+++ b/inventaris.html
@@ -490,7 +490,7 @@
             <div class="dropdown-content">
                 <a href="profile.html">Profil</a>
                 <a href="settings.html">Pengaturan</a>
-                <a href="login.html">Logout</a>
+                <a href="index.html">Logout</a>
             </div>
         </div>
     </header>
