--- a/laporan.html
+++ b/laporan.html
@@ -403,7 +403,7 @@
             <div class="dropdown-content">
                 <a href="#">Profil Saya</a>
                 <a href="#">Pengaturan Akun</a>
-                <a href="#">Keluar</a>
+                <a href="index.html">logout</a>
             </div>
         </div>
     </header>
