--- a/register.html
+++ b/register.html
@@ -207,7 +207,7 @@
 
         <div class="footer-links">
             <span>Sudah punya akun?</span>
-            <a href="login.html">Masuk di sini</a>
+            <a href="index.html">Masuk di sini</a>
         </div>
     </div>
 
@@ -229,7 +229,7 @@
             // Simple client-side simulation for registration
             // In a real application, you would send this data to a server for registration
             alert(`Akun berhasil dibuat untuk ${firstName} ${lastName} dengan email ${email}!`);
-            window.location.href = "login.html"; // Redirect to login page after successful registration
+            window.location.href = "index.html"; // Redirect to index page after successful registration
         });
     </script>
 </body>
