--- a/register.html
+++ b/register.html
@@ -229,7 +229,7 @@
             // Simple client-side simulation for registration
             // In a real application, you would send this data to a server for registration
             alert(`Akun berhasil dibuat untuk ${firstName} ${lastName} dengan email ${email}!`);
-            window.location.href = "index.html"; // Redirect to index page after successful registration
+            window.location.href = "index.html"; // Redirect to index.html page after successful registration
         });
     </script>
 </body>
