--- a/inventaris.html
+++ b/inventaris.html
@@ -476,11 +476,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="beranda.html">Input Barang</a></li>
-		<li><a href="barangmasuk1.html">Barang Masuk</a></li>
-                <li><a href="inventaris.html" class="active">Permintaan Barang</a></li>
+                <li><a href="dashboard.html" class="active">Dashboard</a></li>
+                <li><a href="inputbarang.html">Input Barang</a></li>
+                <li><a href="barangmasuk1.html">Barang Masuk</a></li>
+                <li><a href="inventaris.html">Permintaan Barang</a></li>
                 <li><a href="laporan.html">Cetak Laporan</a></li>
-                <li><a href="pengaturan.html">Pengaturan</a></li>
             </ul>
         </nav>
         <div class="profile-menu" id="profileMenu">
