--- a/barangmasuk1.html
+++ b/barangmasuk1.html
@@ -459,6 +459,29 @@
             border-top: 1px solid #eee;
         }
 
+        /* Notification Badge Styles */
+        .notification-badge {
+            background-color: var(--accent); /* Orange color for notification */
+            color: var(--light);
+            border-radius: 50%;
+            padding: 2px 7px; /* Adjust padding to control size */
+            font-size: 0.7em;
+            position: absolute; /* Position relative to its parent <a> */
+            top: 5px; /* Adjust top and right to fine-tune position */
+            right: 5px;
+            transform: translate(50%, -50%); /* Center the badge */
+            min-width: 20px; /* Ensure it's wide enough for a single digit */
+            text-align: center;
+            line-height: 1.2;
+            display: none; /* Hidden by default, show only when there are notifications */
+        }
+
+        /* To ensure proper positioning of the badge */
+        nav ul li a {
+            position: relative;
+            padding-right: 25px; /* Add some padding to the right to make space for the badge */
+        }
+
         @media (max-width: 768px) {
             header {
                 flex-direction: column;
@@ -521,8 +544,13 @@
                 <li><a href="beranda.html">Input Barang</a></li>
                 <li><a href="barangmasuk1.html">Barang Masuk</a></li>
                 <li><a href="inventaris.html">Permintaan Barang</a></li>
-                <li><a href="laporan.html" class="active">Cetak Laporan</a></li>
-                <li><a href="pengaturan.html">Pengaturan</a></li>
+                <li>
+                    <a href="pengaturan.html" class="active">
+                        Daftar Permintaan
+                        <span id="notificationBadge" class="notification-badge"></span>
+                    </a>
+                </li>
+                <li><a href="laporan.html">Cetak Laporan</a></li>
             </ul>
         </nav>
         <div class="profile-menu" id="profileMenu">
@@ -532,7 +560,7 @@
             <div class="dropdown-content">
                 <a href="profile.html">Profil</a>
                 <a href="settings.html">Pengaturan</a>
-                <a href="login.html">Logout</a>
+                <a href="index.html">Logout</a>
             </div>
         </div>
     </header>
@@ -802,6 +830,8 @@
         const totalInfoExpenditureRp = document.getElementById('totalInfoExpenditureRp');
         const totalInfoFinalStockUnit = document.getElementById('totalInfoFinalStockUnit');
         const totalInfoFinalStockRp = document.getElementById('totalInfoFinalStockRp');
+
+        const notificationBadge = document.getElementById('notificationBadge'); // Added for notification badge
 
         let inventoryData = JSON.parse(localStorage.getItem('inventoryData')) || [];
         // Load permintaanBarangData from inventaris.html's localStorage
@@ -1140,7 +1170,28 @@
         searchButton.addEventListener('click', performSearch); 
         monthFilter.addEventListener('change', performSearch);
 
-        renderInventoryTable(inventoryData);
+        // Function to update the notification badge
+        function updateNotificationBadge() {
+            // Filter requests that are 'Menunggu', 'Menunggu Diskusi Pihak Inventaris' or 'Menunggu Diskusi Pihak Peminta'
+            const pendingRequests = permintaanBarangData.filter(req => 
+                req.status === 'Menunggu' || 
+                req.status === 'Menunggu Diskusi Pihak Inventaris' || 
+                req.status === 'Menunggu Diskusi Pihak Peminta'
+            );
+            
+            if (pendingRequests.length > 0) {
+                notificationBadge.textContent = pendingRequests.length;
+                notificationBadge.style.display = 'inline-block'; // Show the badge
+            } else {
+                notificationBadge.style.display = 'none'; // Hide the badge if no pending requests
+            }
+        }
+
+        // Initial render and notification badge update when page loads
+        document.addEventListener('DOMContentLoaded', () => {
+            renderInventoryTable(inventoryData);
+            updateNotificationBadge(); // Update badge on load
+        });
         
         const profileMenu = document.getElementById('profileMenu');
         if (profileMenu) {
@@ -1156,6 +1207,7 @@
                 }
             });
         }
+		
     </script>
 </body>
 </html>
